--- a/DefaulterList/Resources/ComponentDictionary.xaml
+++ b/DefaulterList/Resources/ComponentDictionary.xaml
@@ -90,6 +90,7 @@
     <Style TargetType="{x:Type DataGridColumnHeader}">
         <Setter Property="HorizontalContentAlignment" Value="Center"/>
         <Setter Property="FontWeight" Value="Bold"/>
+        <Setter Property="FontSize" Value="12"/>
     </Style>
     <!--**********************************************************-->
     <Style x:Key="DataGridColumnSeparator" TargetType="DataGridCell">
