--- a/DefaulterList/Views/RightPanelForGrid.xaml
+++ b/DefaulterList/Views/RightPanelForGrid.xaml
@@ -5,8 +5,73 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:DefaulterList.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="600" d:DesignWidth="300">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+            
+        </Grid.RowDefinitions>
+
+        <DatePicker Grid.Row="0" 
+                    SelectedDate="{Binding DateResult}"/>
+
+        <Label Grid.Row="1" 
+               Content="Перелік бригад"/>
+
+        <DataGrid Grid.Row="2" 
+                  AutoGenerateColumns="False"                   
+                  IsReadOnly="True" 
+                  ItemsSource="{Binding Teams, UpdateSourceTrigger=PropertyChanged}" 
+                  SelectedItem="{Binding TeamSelect, UpdateSourceTrigger=PropertyChanged}">
+            <DataGrid.InputBindings>
+                <MouseBinding Gesture="LeftDoubleClick" Command="{Binding AddTeamForGrid}"/>
+            </DataGrid.InputBindings>
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="Background" Value="{Binding Path=Color}"/>
+                    <Setter Property="FontSize" Value="10"/>
+                </Style>
+            </DataGrid.RowStyle>
+            <DataGrid.Columns>
+                <DataGridTextColumn Foreground="Blue" Header="Бригада" Width="auto"  Binding="{Binding Path=NameTeam}"/>
+                <DataGridTextColumn Header="П.І.Б." Width="*" Binding="{Binding Path=Descriptions}"/>                
+            </DataGrid.Columns>
+        </DataGrid>
+
+        <StackPanel Grid.Row="3" 
+                    Orientation="Vertical" 
+                    HorizontalAlignment="Center">
+            <StackPanel Orientation="Horizontal">
+                <Button Style="{StaticResource FooterButton}"
+                        Command="{Binding FilterTeamForGrid}">
+                    <Button.Content>
+                        <TextBlock TextAlignment="Center">
+                            <Run Text="Фільтрувати"/>
+                            <LineBreak/>
+                            <Run Text="бригаду"/>
+                        </TextBlock>
+                    </Button.Content>
+                </Button>
+                
+                <Button Style="{StaticResource FooterButton}"
+                        Command="{Binding DelTeamForGrid}">
+                    <Button.Content>
+                        <TextBlock TextAlignment="Center">
+                            <Run Text="Видалити"/>
+                            <LineBreak/>
+                            <Run Text="бригаду"/>
+                        </TextBlock>
+                    </Button.Content>
+                </Button>
+            </StackPanel>
+        </StackPanel>
+
         
+
+        
+
     </Grid>
 </UserControl>
