--- a/DefaulterList/Resources/ComponentDictionary.xaml
+++ b/DefaulterList/Resources/ComponentDictionary.xaml
@@ -39,7 +39,7 @@
     <Style TargetType="{x:Type Menu}">
         <Setter Property="Margin" Value="5"/>
         <Setter Property="FontWeight" Value="Bold"/>
-        
+        <Setter Property="FontSize" Value="15"/>
         <Setter Property="Background" Value="{StaticResource Gradient_Blue_White_Blue}"/>                
     </Style>
     <!--************************************** -->
