--- a/DefaulterList/Views/Search.xaml
+++ b/DefaulterList/Views/Search.xaml
@@ -16,7 +16,8 @@
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="auto"/>
                     <ColumnDefinition Width="auto"/>
-                    <ColumnDefinition Width="auto"/>                    
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition Width="auto"/>
                 </Grid.ColumnDefinitions>
 
                 <Label Grid.Column="0"
@@ -66,7 +67,15 @@
                          Margin="5"
                          Width="100"
                          Text="{Binding SecondaryField}"/>
-                
+
+                <CheckBox Grid.Column="7" 
+                          Content="Опрацьовані"
+                          Margin="10,5,10,5"
+                          Foreground="Blue"
+                          HorizontalContentAlignment="Center"
+                          VerticalContentAlignment="Center"
+                          IsChecked="{Binding IsCheckedFinish}"/>
+
             </Grid>
         </Border>            
     </Grid>
