Added functionality for printing the Report table

--- a/DefaulterList/Views/Menu.xaml
+++ b/DefaulterList/Views/Menu.xaml
@@ -20,6 +20,10 @@
                 <MenuItem Header="Завдання" Command="{Binding TaskView}"/>
                 <MenuItem Header="Налаштування" Command="{Binding TeamView}"/>
             </MenuItem>
+            <MenuItem Header="Друк" Visibility="{Binding IsVisibility[db]}">
+                <MenuItem Header="Реєстр по фільтру" Command="{Binding PrintGrid}"/>
+                <MenuItem Header="Звіт про роботу за добу" Command="{Binding PrintReportToday}"/>
+            </MenuItem>
             <Separator Margin="10,0,0,0"/>
             <MenuItem Header="Очистити" Foreground="Red" Visibility="{Binding IsVisibility[MenuClear]}">
                 <MenuItem Header="Виконавців" Foreground="Green" Command="{Binding ClearWorker}"/>
