--- a/DefaulterList/Views/Menu.xaml
+++ b/DefaulterList/Views/Menu.xaml
@@ -22,8 +22,12 @@
             </MenuItem>
             <MenuItem Header="Друк" Visibility="{Binding IsVisibility[db]}">
                 <MenuItem Header="Реєстр по фільтру" Command="{Binding PrintGrid}"/>
+                <Separator Margin="5"/>
                 <MenuItem Header="Звіт про роботу за добу" Command="{Binding PrintReportToday}"/>
-                <MenuItem Header="Звіт в Telegram" Command="{Binding PrintReportTelegram}"/>
+                <MenuItem Header="Звіт в Telegram за добу" Command="{Binding PrintReportTelegram}"/>
+                <Separator Margin="5"/>
+                <MenuItem Header="Звіт про роботу за місяць" Command="{Binding PrintReportTodayMonth}"/>
+                <MenuItem Header="Звіт в Telegram за місяць" Command="{Binding PrintReportTelegramMonth}"/>
             </MenuItem>
             <Separator Margin="10,0,0,0"/>
             <MenuItem Header="Очистити" Foreground="Red" Visibility="{Binding IsVisibility[MenuClear]}">
